# qwenTTS-turbo

./: .gitignore  DEVLOG.md  LICENSE  README.md  demo.py  generate_samples.py  pyproject.toml
qwentts_turbo/: __init__.py  generator.py  megakernel_backbone.py  megakernel_code_predictor.py  utils.py
qwentts_turbo/csrc/: fused_decode_code_predictor.cu  fused_decode_tts.cu  rope_multimodal.cuh
tests/: bench.py  bench_vllm.py  test_audio.py
